# petrobalt-agent

./: .env.example  .gitignore  railway.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fb2f9df4bc0b_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: calculator.py  comparator.py  procurement.py  validator.py
backend/app/db/: engine.py
backend/app/db/repositories/: __init__.py  materials.py  price_history.py  purchase_requests.py  route_cards.py  stock_balances.py  suppliers.py
backend/app/models/: __init__.py  base.py  tables.py
backend/app/parsers/: mk_parser.py
backend/app/routers/: mk.py
backend/app/schemas/: calculator_schema.py  comparator_schema.py  mk_schema.py  procurement_schema.py  validator_schema.py
backend/app/services/: storage.py
backend/tests/: test_calculator.py  test_comparator.py  test_mk_endpoint.py  test_mk_parser.py  test_procurement.py  test_validator.py
db/: schema.sql
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FieldRow.tsx  Layout.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Spinner.tsx
frontend/src/pages/: CalculatePage.tsx  ComparePage.tsx  ProcurePage.tsx  UploadPage.tsx  ValidatePage.tsx
frontend/src/store/: pipeline.tsx
frontend/src/types/: mk.ts
