[project]
name = "petrobalt-agent-backend"
version = "0.1.0"
description = "AI-агент расчёта материалов и поиска поставщиков"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # БД
    "supabase>=2.5.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # AI
    "anthropic>=0.28.0",
    # Парсинг PDF
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",   # при сборке Docker требует libmupdf-dev или wheel
    # Поиск поставщиков
    "tavily-python>=0.3.0",
    # Экспорт
    "openpyxl>=3.1.0",
    # Утилиты
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
